--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Leader tạo dự án</h1>
+    <header>
+        <h2>Dev xây header</h2>
+    </header>
 </body>
 </html>
